--- a/crmsystem_frontend/pom.xml
+++ b/crmsystem_frontend/pom.xml
@@ -75,6 +75,19 @@
             <artifactId>crmsystem_backend</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- REST -->
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.7.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
     </dependencies>
     <build>
         <finalName>crmsystem_frontend</finalName>
