--- a/crmsystem_frontend/pom.xml
+++ b/crmsystem_frontend/pom.xml
@@ -20,6 +20,9 @@
         <javax-servlet-api.version>2.5</javax-servlet-api.version>
         <javax-el-api.version>2.2</javax-el-api.version>
         <javax-el-impl.version>2.2</javax-el-impl.version>
+
+        <log4j.version>1.2.17</log4j.version>
+
     </properties>
 
     <dependencies>
@@ -88,6 +91,31 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>2.2.2</version>
+        </dependency>
+
+        <!-- Log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.22</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>jcl-over-slf4j</artifactId>
+            <version>1.7.22</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.7.22</version>
+            <scope>runtime</scope>
         </dependency>
 
     </dependencies>
