--- a/crmsystem_frontend/pom.xml
+++ b/crmsystem_frontend/pom.xml
@@ -22,6 +22,12 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+
         <!-- Spring -->
         <dependency>
             <groupId>org.springframework</groupId>
