--- a/crmsystem_frontend/src/main/webapp/WEB-INF/web.xml
+++ b/crmsystem_frontend/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,6 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/spring-config-root.xml</param-value>
     </context-param>
-
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -48,6 +47,17 @@
             <param-value>true</param-value>
         </init-param>
     </filter>
+
+    <filter>
+        <display-name>multipartFilter</display-name>
+        <filter-name>multipartFilter</filter-name>
+        <filter-class>org.springframework.web.multipart.support.MultipartFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>multipartFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <filter-mapping>
         <filter-name>springSecurityFilterChain</filter-name>
         <url-pattern>/*</url-pattern>
