--- a/crmsystem_backend/pom.xml
+++ b/crmsystem_backend/pom.xml
@@ -134,6 +134,11 @@
             <version>1.7.22</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.3</version>
+        </dependency>
 
     </dependencies>
 </project>
