--- a/crmsystem_backend/pom.xml
+++ b/crmsystem_backend/pom.xml
@@ -21,6 +21,7 @@
         <javax.persistence.version>1.0.2</javax.persistence.version>
         <commons-dbcp.version>1.4</commons-dbcp.version>
         <log4j.version>1.2.17</log4j.version>
+        <org.springframework-version>4.2.2.RELEASE</org.springframework-version>
     </properties>
 
     <dependencies>
@@ -80,6 +81,20 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-taglibs</artifactId>
             <version>${spring-security.version}</version>
+        </dependency>
+
+        <!-- Spring JavaMailSenderImpl-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>${org.springframework-version}</version>
+        </dependency>
+
+        <!-- Java Mail-->
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.5.4</version>
         </dependency>
 
         <!-- MySQL -->
