--- a/crmsystem_backend/pom.xml
+++ b/crmsystem_backend/pom.xml
@@ -16,6 +16,7 @@
         <spring.version>4.3.4.RELEASE</spring.version>
         <spring-data-jpa.version>1.10.5.RELEASE</spring-data-jpa.version>
         <spring-security.version>4.1.3.RELEASE</spring-security.version>
+        <javax.mail.version>1.5.4</javax.mail.version>
         <mysql-connector.version>6.0.5</mysql-connector.version>
         <postgresql>9.4.1212</postgresql>
         <javax.persistence.version>1.0.2</javax.persistence.version>
@@ -50,7 +51,6 @@
             <artifactId>spring-orm</artifactId>
             <version>${spring.version}</version>
         </dependency>
-
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -94,7 +94,7 @@
         <dependency>
             <groupId>com.sun.mail</groupId>
             <artifactId>javax.mail</artifactId>
-            <version>1.5.4</version>
+            <version>${javax.mail.version}</version>
         </dependency>
 
         <!-- MySQL -->
